# fastapi-template

./: ALTERNATE_TEMPLATES.md  NEXT_STEPS.md  README.md  REFERENCES.md  pyproject.toml
.github/: FUNDING.yml
.github/actions/create-badge/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: badge.yml  badge_setup.yml  build.yml  ruff.yml  wily.yml
_notes/: AWESOME.md  NEXT_STEPS.md  REFERENCES.md  TODO.md
fastapi-template/: main.py
frontend/templates/: base.html  index.html
frontend/templates/components/: hyperscript_button.html
frontend/templates/pages/: 404.html  alerts.html  avatars.html  badge.html  bar-chart.html  basic-tables.html  blank.html  buttons.html  calendar.html  form-elements.html  images.html  index.html  line-chart.html  profile.html  signin.html  signup.html  videos.html
frontend/templates/partials/: head.html
frontend/templates/partials/metric-group/: metric-group-01.html
